# clerr

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: clerr-config.cmake
include/: clerr.hpp
test_package/: CMakeLists.txt  conanfile.py  cxx11.cpp  cxx17.cpp
